--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,17 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
+
+<%= search_form_for @search do |f| %>
+      <div class="field">
+        <%= f.label :product_name_cont, "Name Contains" %>
+        <%= f.text_field :product_name_cont %>
+      </div>
+    <div class="actions">
+      <%= f.submit "search" %>
+    </div>
+<% end %>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -15,6 +26,7 @@
     </tr>
   </thead>
   <tbody>
+
     <% @products.each do |product| %>
       <tr>
         <td><%= product.product_number %></td>
