--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,15 @@
  *= require_self
  *= require_tree .
  */
+
+@media print{
+    body{
+        background-color: #FFF;
+    }
+    #container{
+        width: auto;
+        margin: 0;
+        padding: 0;
+        border: none;
+    }
+}
