--- a/app/views/tax_invoices/show.html.erb
+++ b/app/views/tax_invoices/show.html.erb
@@ -32,5 +32,5 @@
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
-  <p id="pdf_link"> <%= link_to "Download Invoice",tax_invoice_path(@tax_invoice, :format => "pdf"), :class => "btn" %> </p>
+  <p id="pdf_link"> <%= link_to "Download Invoice",generate_pdf_path(:format => 'pdf'), :class => "btn" %> </p>
 </div>
